[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtcloud-importer"
dynamic = ["version"]
description = "Import existing dbt Cloud account state into Terraform YAML configuration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<0.28",
    "pydantic>=2.8,<3",
    "PyYAML>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "python-slugify>=8.0,<9",
]

[project.scripts]
dbtcloud-import = "importer.cli:cli"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = [".."]
include = ["importer*"]

[tool.setuptools.package-data]
importer = ["VERSION", "importer_mapping.yml"]
